--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   
         <div style="place-self: center;">Бревна: <span id="spnWoodValue">0</span></div>
         <div style="place-self: center;"><span id="spnWoodUpgLevel">0</span> | <span id="spnWoodRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgWood" style="width: 100px;">Улучшить</button> <span id="spnWoodUpg">10</span> монет.</div>
-        <div style="place-self: center;"><button id="btnSellWood" style="width: 130px;">Продать за 1 м.</button></div>
+        <div style="place-self: center;"><button id="btnUpgWood" style="width: 75px;">Улучшить</button> <span id="spnWoodUpg">10</span> м</div>
+        <div style="place-self: center;"><button id="btnSellWood" style="width: 75px;">Продать</button> 1 м.</div>
 
         <div style="place-self: center;">Камень: <span id="spnStoneValue">0</span></div>
         <div style="place-self: center;"><span id="spnStoneUpgLevel">0</span> | <span id="spnStoneRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgStone" style="width: 100px;">Улучшить</button> <span id="spnStoneUpg">300</span> монет</div>
-        <div style="place-self: center;"><button id="btnSellStone" style="width: 130px;">Продать за 30 м.</button></div> 
+        <div style="place-self: center;"><button id="btnUpgStone" style="width: 75px;">Улучшить</button> <span id="spnStoneUpg">300</span> м</div>
+        <div style="place-self: center;"><button id="btnSellStone" style="width: 75px;">Продать</button> 30 м.</div> 
       </div>
       <div class="production">
         <div class="name_prod">Производство</div>
@@ -52,13 +52,13 @@
 
         <div style="place-self: center;">Доски: <span id="spnPlankValue">0</span></div>
         <div style="place-self: center;"><span id="spnPlankUpgLevel">0</span> | <span id="spnPlankRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgPlank" style="width: 100px;">Улучшить</button> <span id="spnPlankUpg">100</span> монет</div>
-        <div style="place-self: center;"><button id="btnSellPlank" style="width: 130px;">Продать за 10 м.</button></div>
+        <div style="place-self: center;"><button id="btnUpgPlank" style="width: 75px;">Улучшить</button> <span id="spnPlankUpg">100</span> м</div>
+        <div style="place-self: center;"><button id="btnSellPlank" style="width: 75px;">Продать</button> 10 м.</div>
 
         <div style="place-self: center;">Блоки: <span id="spnBlocksValue">0</span></div>
         <div style="place-self: center;"><span id="spnBlocksUpgLevel">0</span> | <span id="spnBlocksRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgBlocks" style="width: 100px;">Улучшить</button> <span id="spnBlocksUpg">500</span> монет</div>
-        <div style="place-self: center;"><button id="btnSellBlocks" style="width: 130px;">Продать за 50 м.</button></div>
+        <div style="place-self: center;"><button id="btnUpgBlocks" style="width: 75px;">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
+        <div style="place-self: center;"><button id="btnSellBlocks" style="width: 75px;">Продать</button> 50 м.</div>
       </div>
       <div class="buttons">
         <div class="money">
