--- a/index.html
+++ b/index.html
@@ -28,37 +28,37 @@
     <div class="main_container">
       <div class="material">
         <div class="name_mat">Добыча</div>
-        <div class="gridItemBorder" style="place-self: center;">Материал</div>
-        <div class="gridItemBorder" style="place-self: center;">Уровень|Добыча</div>
-        <div class="gridItemBorder" style="place-self: center;">Улучшение</div>
-        <div class="gridItemBorder" style="place-self: center;">Продажа</div>
+        <div class="gridItemBorder">Материал</div>
+        <div class="gridItemBorder">Уровень|Добыча</div>
+        <div class="gridItemBorder">Улучшение</div>
+        <div class="gridItemBorder">Продажа</div>
   
-        <div style="place-self: center;">Бревна: <span id="spnWoodValue">0</span></div>
-        <div style="place-self: center;"><span id="spnWoodUpgLevel">0</span> | <span id="spnWoodRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgWood" style="width: 75px;">Улучшить</button> <span id="spnWoodUpg">10</span> м</div>
-        <div style="place-self: center;"><button id="btnSellWood" style="width: 75px;">Продать</button> 1 м.</div>
+        <div class="resourse_line">Бревна: <span id="spnWoodValue">0</span></div>
+        <div class="resourse_line"><span id="spnWoodUpgLevel">0</span> | <span id="spnWoodRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgWood" style="width: 75px;">Улучшить</button> <span id="spnWoodUpg">10</span> м</div>
+        <div class="resourse_line"><button id="btnSellWood" style="width: 75px;">Продать</button> 1 м.</div>
 
-        <div style="place-self: center;">Камень: <span id="spnStoneValue">0</span></div>
-        <div style="place-self: center;"><span id="spnStoneUpgLevel">0</span> | <span id="spnStoneRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgStone" style="width: 75px;">Улучшить</button> <span id="spnStoneUpg">300</span> м</div>
-        <div style="place-self: center;"><button id="btnSellStone" style="width: 75px;">Продать</button> 30 м.</div> 
+        <div class="resourse_line">Камень: <span id="spnStoneValue">0</span></div>
+        <div class="resourse_line"><span id="spnStoneUpgLevel">0</span> | <span id="spnStoneRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgStone" style="width: 75px;">Улучшить</button> <span id="spnStoneUpg">300</span> м</div>
+        <div class="resourse_line"><button id="btnSellStone" style="width: 75px;">Продать</button> 30 м.</div> 
       </div>
       <div class="production">
         <div class="name_prod">Производство</div>
-        <div class="gridItemBorder" style="place-self: center;">Материал</div>
-        <div class="gridItemBorder" style="place-self: center;">Уровень|Добыча</div>
-        <div class="gridItemBorder" style="place-self: center;">Улучшение</div>
-        <div class="gridItemBorder" style="place-self: center;">Продажа</div>
+        <div class="gridItemBorder">Материал</div>
+        <div class="gridItemBorder">Уровень|Добыча</div>
+        <div class="gridItemBorder">Улучшение</div>
+        <div class="gridItemBorder">Продажа</div>
 
-        <div style="place-self: center;">Доски: <span id="spnPlankValue">0</span></div>
-        <div style="place-self: center;"><span id="spnPlankUpgLevel">0</span> | <span id="spnPlankRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgPlank" style="width: 75px;">Улучшить</button> <span id="spnPlankUpg">100</span> м</div>
-        <div style="place-self: center;"><button id="btnSellPlank" style="width: 75px;">Продать</button> 10 м.</div>
+        <div class="resourse_line">Доски: <span id="spnPlankValue">0</span></div>
+        <div class="resourse_line"><span id="spnPlankUpgLevel">0</span> | <span id="spnPlankRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgPlank" style="width: 75px;">Улучшить</button> <span id="spnPlankUpg">100</span> м</div>
+        <div class="resourse_line"><button id="btnSellPlank" style="width: 75px;">Продать</button> 10 м.</div>
 
-        <div style="place-self: center;">Блоки: <span id="spnBlocksValue">0</span></div>
-        <div style="place-self: center;"><span id="spnBlocksUpgLevel">0</span> | <span id="spnBlocksRate">0</span>/c</div>
-        <div style="place-self: center;"><button id="btnUpgBlocks" style="width: 75px;">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
-        <div style="place-self: center;"><button id="btnSellBlocks" style="width: 75px;">Продать</button> 50 м.</div>
+        <div class="resourse_line">Блоки: <span id="spnBlocksValue">0</span></div>
+        <div class="resourse_line"><span id="spnBlocksUpgLevel">0</span> | <span id="spnBlocksRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgBlocks" style="width: 75px;">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
+        <div class="resourse_line"><button id="btnSellBlocks" style="width: 75px;">Продать</button> 50 м.</div>
       </div>
       <div class="buttons">
         <div class="money">
