--- a/index.html
+++ b/index.html
@@ -35,16 +35,31 @@
   
         <div class="resourse_line">Бревна: <span id="spnWoodValue">0</span></div>
         <div class="resourse_line"><span id="spnWoodUpgLevel">0</span> | <span id="spnWoodRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgWood" style="width: 75px;">Улучшить</button> <span id="spnWoodUpg">10</span> м</div>
-        <div class="resourse_line"><button id="btnSellWood" style="width: 75px;">Продать</button> 1 м.</div>
+        <div class="resourse_line"><button id="btnUpgWood" class="base_btn">Улучшить</button> <span id="spnWoodUpg">10</span> м</div>
+        <div class="resourse_line"><button id="btnSellWood" class="base_btn">Продать</button> 1 м.</div>
 
         <div class="resourse_line">Камень: <span id="spnStoneValue">0</span></div>
         <div class="resourse_line"><span id="spnStoneUpgLevel">0</span> | <span id="spnStoneRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgStone" style="width: 75px;">Улучшить</button> <span id="spnStoneUpg">300</span> м</div>
-        <div class="resourse_line"><button id="btnSellStone" style="width: 75px;">Продать</button> 30 м.</div> 
+        <div class="resourse_line"><button id="btnUpgStone" class="base_btn">Улучшить</button> <span id="spnStoneUpg">300</span> м</div>
+        <div class="resourse_line"><button id="btnSellStone" class="base_btn">Продать</button> 30 м.</div>
+        
+        <div class="resourse_line">Медная руда: <span id="spnCopperOreValue">0</span></div>
+        <div class="resourse_line"><span id="spnCopperOreUpgLevel">0</span> | <span id="spnCopperOreRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgCopperOre" class="base_btn">Улучшить</button> <span id="spnCopperOreUpg">500</span> м</div>
+        <div class="resourse_line"><button id="btnSellCopperOre" class="base_btn">Продать</button> 50 м.</div>
+        
+        <div class="resourse_line">Оловянная  руда: <span id="spnTinOreValue">0</span></div>
+        <div class="resourse_line"><span id="spnTinOreUpgLevel">0</span> | <span id="spnTinOreRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgTinOre" class="base_btn">Улучшить</button> <span id="spnTinOreUpg">750</span> м</div>
+        <div class="resourse_line"><button id="btnSellTinOre" class="base_btn">Продать</button> 75 м.</div>
+
+        <div class="resourse_line">Железная  руда: <span id="spnIronOreValue">0</span></div>
+        <div class="resourse_line"><span id="spnIronOreUpgLevel">0</span> | <span id="spnIronOreRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgIronOre" class="base_btn">Улучшить</button> <span id="spnIronOreUpg">1000</span> м</div>
+        <div class="resourse_line"><button id="btnSellIronOre" class="base_btn">Продать</button> 100 м.</div>
       </div>
-      <div class="production">
-        <div class="name_prod">Производство</div>
+      <div class="recycling">
+        <div class="name_recyc">Переработка</div>
         <div class="gridItemBorder">Материал</div>
         <div class="gridItemBorder">Уровень|Добыча</div>
         <div class="gridItemBorder">Улучшение</div>
@@ -52,13 +67,16 @@
 
         <div class="resourse_line">Доски: <span id="spnPlankValue">0</span></div>
         <div class="resourse_line"><span id="spnPlankUpgLevel">0</span> | <span id="spnPlankRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgPlank" style="width: 75px;">Улучшить</button> <span id="spnPlankUpg">100</span> м</div>
-        <div class="resourse_line"><button id="btnSellPlank" style="width: 75px;">Продать</button> 10 м.</div>
+        <div class="resourse_line"><button id="btnUpgPlank" class="base_btn">Улучшить</button> <span id="spnPlankUpg">100</span> м</div>
+        <div class="resourse_line"><button id="btnSellPlank" class="base_btn">Продать</button> 10 м.</div>
 
         <div class="resourse_line">Блоки: <span id="spnBlocksValue">0</span></div>
         <div class="resourse_line"><span id="spnBlocksUpgLevel">0</span> | <span id="spnBlocksRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgBlocks" style="width: 75px;">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
-        <div class="resourse_line"><button id="btnSellBlocks" style="width: 75px;">Продать</button> 50 м.</div>
+        <div class="resourse_line"><button id="btnUpgBlocks" class="base_btn">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
+        <div class="resourse_line"><button id="btnSellBlocks" class="base_btn">Продать</button> 50 м.</div>
+      </div>
+      <div class="production">
+        <div class="name_prod">Производство</div>
       </div>
       <div class="buttons">
         <div class="money">
@@ -72,6 +90,7 @@
           </div>
         </div>
       </div>
+      <div><!-- Пустой div заглушка --></div>
       <div><!-- Пустой div заглушка --></div>
     </div>
   </div>
