--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
         <div class="resourse_line"><span id="spnBlocksUpgLevel">0</span> | <span id="spnBlocksRate">0</span>/c</div>
         <div class="resourse_line"><button id="btnUpgBlocks" class="base_btn">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
         <div class="resourse_line"><button id="btnSellBlocks" class="base_btn">Продать</button> 50 м.</div>
+
+        <div class="resourse_line">Медные слитки: <span id="spnCopperIngotValue">0</span></div>
+        <div class="resourse_line"><span id="spnCopperIngotUpgLevel">0</span> | <span id="spnCopperIngotRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgCopperIngot" class="base_btn">Улучшить</button> <span id="spnCopperIngotUpg">750</span> м</div>
+        <div class="resourse_line"><button id="btnSellCopperIngot" class="base_btn">Продать</button> 50 м.</div>
+
+        <div class="resourse_line">Оловянные  слитки: <span id="spnTinIngotValue">0</span></div>
+        <div class="resourse_line"><span id="spnTinIngotUpgLevel">0</span> | <span id="spnTinIngotRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgTinIngot" class="base_btn">Улучшить</button> <span id="spnTinIngotUpg">800</span> м</div>
+        <div class="resourse_line"><button id="btnSellTinIngot" class="base_btn">Продать</button> 75 м.</div>
+
+        <div class="resourse_line">Железные  слитки: <span id="spnIronIngotValue">0</span></div>
+        <div class="resourse_line"><span id="spnIronIngotUpgLevel">0</span> | <span id="spnIronIngotRate">0</span>/c</div>
+        <div class="resourse_line"><button id="btnUpgIronIngot" class="base_btn">Улучшить</button> <span id="spnIronIngotUpg">1000</span> м</div>
+        <div class="resourse_line"><button id="btnSellIronIngot" class="base_btn">Продать</button> 100 м.</div>
       </div>
       <div class="production">
         <div class="name_prod">Производство</div>
@@ -87,6 +102,7 @@
         <div class="clicker">
           <div style="place-self: center; ;">
             <button id="btnChopTrees" style="width: 120px;">Рубить деревья</button>
+            <button id="btnTest" style="width: 120px;" onclick="TestFunc()">Тестирование</button>
           </div>
         </div>
       </div>
