--- a/index.html
+++ b/index.html
@@ -29,69 +29,129 @@
       <div class="material">
         <div class="name_mat">Добыча</div>
         <div class="gridItemBorder">Материал</div>
-        <div class="gridItemBorder">Уровень|Добыча</div>
-        <div class="gridItemBorder">Улучшение</div>
+        <div class="gridItemBorder">Уровень</div>
+        <div class="gridItemBorder">Улучшение</div> 
+        <div class="gridItemBorder">Добыча</div>
+        <div class="gridItemBorder">Количество</div> 
         <div class="gridItemBorder">Продажа</div>
   
-        <div class="resourse_line">Бревна: <span id="spnWoodValue">0</span></div>
-        <div class="resourse_line"><span id="spnWoodUpgLevel">0</span> | <span id="spnWoodRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgWood" class="base_btn">Улучшить</button> <span id="spnWoodUpg">10</span> м</div>
-        <div class="resourse_line"><button id="btnSellWood" class="base_btn">Продать</button> 1 м.</div>
+        <div class="resourse_line">Бревна</div>
+        <div class="resourse_line"><span id="spnWoodUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgWood" class="base_btn"><span id="spnWoodUpg">10</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnWoodRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnWoodValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellWood" class="base_btn">1 <img src="static/money-bag.png"></button></div>
 
-        <div class="resourse_line">Камень: <span id="spnStoneValue">0</span></div>
-        <div class="resourse_line"><span id="spnStoneUpgLevel">0</span> | <span id="spnStoneRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgStone" class="base_btn">Улучшить</button> <span id="spnStoneUpg">300</span> м</div>
-        <div class="resourse_line"><button id="btnSellStone" class="base_btn">Продать</button> 30 м.</div>
+        <div class="resourse_line">Камень</div>
+        <div class="resourse_line"><span id="spnStoneUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgStone" class="base_btn"><span id="spnStoneUpg">300</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnStoneRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnStoneValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellStone" class="base_btn">30 <img src="static/money-bag.png"></button></div>
         
-        <div class="resourse_line">Медная руда: <span id="spnCopperOreValue">0</span></div>
-        <div class="resourse_line"><span id="spnCopperOreUpgLevel">0</span> | <span id="spnCopperOreRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgCopperOre" class="base_btn">Улучшить</button> <span id="spnCopperOreUpg">500</span> м</div>
-        <div class="resourse_line"><button id="btnSellCopperOre" class="base_btn">Продать</button> 50 м.</div>
+        <div class="resourse_line">Медная руда</div>
+        <div class="resourse_line"><span id="spnCopperOreUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgCopperOre" class="base_btn"><span id="spnCopperOreUpg">500</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnCopperOreRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnCopperOreValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellCopperOre" class="base_btn">50 <img src="static/money-bag.png"></button></div>
         
-        <div class="resourse_line">Оловянная  руда: <span id="spnTinOreValue">0</span></div>
-        <div class="resourse_line"><span id="spnTinOreUpgLevel">0</span> | <span id="spnTinOreRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgTinOre" class="base_btn">Улучшить</button> <span id="spnTinOreUpg">750</span> м</div>
-        <div class="resourse_line"><button id="btnSellTinOre" class="base_btn">Продать</button> 75 м.</div>
+        <div class="resourse_line">Оловянная  руда</div> 
+        <div class="resourse_line"><span id="spnTinOreUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgTinOre" class="base_btn"><span id="spnTinOreUpg">750</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnTinOreRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnTinOreValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellTinOre" class="base_btn">75 <img src="static/money-bag.png"></button></div>
 
-        <div class="resourse_line">Железная  руда: <span id="spnIronOreValue">0</span></div>
-        <div class="resourse_line"><span id="spnIronOreUpgLevel">0</span> | <span id="spnIronOreRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgIronOre" class="base_btn">Улучшить</button> <span id="spnIronOreUpg">1000</span> м</div>
-        <div class="resourse_line"><button id="btnSellIronOre" class="base_btn">Продать</button> 100 м.</div>
+        <div class="resourse_line">Железная  руда</div>
+        <div class="resourse_line"><span id="spnIronOreUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgIronOre" class="base_btn"><span id="spnIronOreUpg">1000</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnIronOreRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnIronOreValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellIronOre" class="base_btn">100 <img src="static/money-bag.png"></button></div>
       </div>
       <div class="recycling">
         <div class="name_recyc">Переработка</div>
         <div class="gridItemBorder">Материал</div>
-        <div class="gridItemBorder">Уровень|Добыча</div>
-        <div class="gridItemBorder">Улучшение</div>
+        <div class="gridItemBorder">Уровень</div>
+        <div class="gridItemBorder">Улучшение</div> 
+        <div class="gridItemBorder">Добыча</div>
+        <div class="gridItemBorder">Количество</div> 
         <div class="gridItemBorder">Продажа</div>
 
-        <div class="resourse_line">Доски: <span id="spnPlankValue">0</span></div>
-        <div class="resourse_line"><span id="spnPlankUpgLevel">0</span> | <span id="spnPlankRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgPlank" class="base_btn">Улучшить</button> <span id="spnPlankUpg">100</span> м</div>
-        <div class="resourse_line"><button id="btnSellPlank" class="base_btn">Продать</button> 10 м.</div>
+        <div class="resourse_line">Доски</div>
+        <div class="resourse_line"><span id="spnPlankUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgPlank" class="base_btn"><span id="spnPlankUpg">100</span> <img src="static/coin.png"></button> </div>
+        <div class="resourse_line"><span id="spnPlankRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnPlankValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellPlank" class="base_btn">10 <img src="static/money-bag.png"></button></div>
 
-        <div class="resourse_line">Блоки: <span id="spnBlocksValue">0</span></div>
-        <div class="resourse_line"><span id="spnBlocksUpgLevel">0</span> | <span id="spnBlocksRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgBlocks" class="base_btn">Улучшить</button> <span id="spnBlocksUpg">500</span> м</div>
-        <div class="resourse_line"><button id="btnSellBlocks" class="base_btn">Продать</button> 50 м.</div>
+        <div class="resourse_line">Блоки</div>
+        <div class="resourse_line"><span id="spnBlocksUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgBlocks" class="base_btn"><span id="spnBlocksUpg">500</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnBlocksRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnBlocksValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellBlocks" class="base_btn">50 <img src="static/money-bag.png"></button></div>
 
-        <div class="resourse_line">Медные слитки: <span id="spnCopperIngotValue">0</span></div>
-        <div class="resourse_line"><span id="spnCopperIngotUpgLevel">0</span> | <span id="spnCopperIngotRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgCopperIngot" class="base_btn">Улучшить</button> <span id="spnCopperIngotUpg">750</span> м</div>
-        <div class="resourse_line"><button id="btnSellCopperIngot" class="base_btn">Продать</button> 50 м.</div>
+        <div class="resourse_line">Медные слитки</div>
+        <div class="resourse_line"><span id="spnCopperIngotUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgCopperIngot" class="base_btn"><span id="spnCopperIngotUpg">750</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnCopperIngotRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnCopperIngotValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellCopperIngot" class="base_btn">50 <img src="static/money-bag.png"></button></div>
 
-        <div class="resourse_line">Оловянные  слитки: <span id="spnTinIngotValue">0</span></div>
-        <div class="resourse_line"><span id="spnTinIngotUpgLevel">0</span> | <span id="spnTinIngotRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgTinIngot" class="base_btn">Улучшить</button> <span id="spnTinIngotUpg">800</span> м</div>
-        <div class="resourse_line"><button id="btnSellTinIngot" class="base_btn">Продать</button> 75 м.</div>
+        <div class="resourse_line">Оловянные  слитки</div>
+        <div class="resourse_line"><span id="spnTinIngotUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgTinIngot" class="base_btn"><span id="spnTinIngotUpg">800</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnTinIngotRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnTinIngotValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellTinIngot" class="base_btn">75 <img src="static/money-bag.png"></button></div>
 
-        <div class="resourse_line">Железные  слитки: <span id="spnIronIngotValue">0</span></div>
-        <div class="resourse_line"><span id="spnIronIngotUpgLevel">0</span> | <span id="spnIronIngotRate">0</span>/c</div>
-        <div class="resourse_line"><button id="btnUpgIronIngot" class="base_btn">Улучшить</button> <span id="spnIronIngotUpg">1000</span> м</div>
-        <div class="resourse_line"><button id="btnSellIronIngot" class="base_btn">Продать</button> 100 м.</div>
+        <div class="resourse_line">Железные  слитки</div>
+        <div class="resourse_line"><span id="spnIronIngotUpgLevel">0</span></div>
+        <div class="resourse_line"><button id="btnUpgIronIngot" class="base_btn"><span id="spnIronIngotUpg">1000</span> <img src="static/coin.png"></button></div>
+        <div class="resourse_line"><span id="spnIronIngotRate">0</span>/c</div>
+        <div class="resourse_line"><span id="spnIronIngotValue">0</span></div>
+        <div class="resourse_line"><button id="btnSellIronIngot" class="base_btn">100 <img src="static/money-bag.png"></button></div>
       </div>
       <div class="production">
         <div class="name_prod">Производство</div>
+        <div class="gridItemBorder">Материал</div>
+        <div class="gridItemBorder">Уровень</div>
+        <div class="gridItemBorder">Улучшение</div> 
+        <div class="gridItemBorder">Добыча</div>
+        <div class="gridItemBorder">Количество</div> 
+        <div class="gridItemBorder">Продажа</div>
+
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
+        <div class="resourse_line"></div>
       </div>
       <div class="buttons">
         <div class="money">
