--- a/index.html
+++ b/index.html
@@ -160,11 +160,15 @@
           </div>
         </div>
         <div class="clicker">
-          <div style="place-self: center; ;">
+          <div style="place-self: center;">
             <button id="btnChopTrees" style="width: 120px;">Рубить деревья</button>
-            <button id="btnTest" style="width: 120px;" onclick="TestFunc()">Тестирование</button>
           </div>
         </div>
+          <div class="test">
+            <div style="place-self: center;">
+              <button id="btnTest" style="width: 120px;" onclick="TestFunc()">Тестирование</button>
+            </div>
+          </div>
       </div>
       <div><!-- Пустой div заглушка --></div>
       <div><!-- Пустой div заглушка --></div>
