--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
       <div class="buttons">
         <div class="money">
           <div style="text-align: center; place-self: center;">
-            <label>Монеты</label><br><br><span id="spnMoneyValue">0</span>
+            <label><b>Монеты</b></label><br><br><img src="static/coin.png"> <span id="spnMoneyValue">0</span> <img src="static/coin.png">
           </div>
         </div>
         <div class="clicker">
           <div style="place-self: center;">
-            <button id="btnChopTrees" style="width: 120px;">Рубить деревья</button>
+            <button id="btnChopTrees" style="width: 140px;"><img src="static/axe.png"> Рубить деревья</button>
           </div>
         </div>
           <div class="test">
@@ -171,7 +171,7 @@
           </div>
       </div>
       <div><!-- Пустой div заглушка --></div>
-      <div><!-- Пустой div заглушка --></div>
+      <div>Строительство города</div>
     </div>
   </div>
   <div id="city" class="tabcontent">
