--- a/index.html
+++ b/index.html
@@ -171,11 +171,12 @@
         </div>
         
         <div class="material_line">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div>Инструменты</div>
+          <div><span id="spnToolsUpgLevel">0</span></div>
+          <div><button id="btnUpgTools" class="base_btn"><span id="spnToolsUpg">1000</span> <img src="static/coin.png"></button></div>
+          <div><span id="spnToolsRate">0</span>/c</div>
+          <div><span id="spnToolsValue">0</span></div>
+          <div><button id="btnSellTools" class="base_btn">100 <img src="static/money-bag.png"></button></div>
         </div>
         
         <div class="material_line">
