--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div><span id="spnBronzeIngotUpgLevel">0</span></div>
           <div><button id="btnUpgBronzeIngot" class="base_btn"><span id="spnBronzeIngotUpg">1000</span> <img src="static/coin.png"></button></div>
           <div><span id="spnBronzeIngotRate">0</span>/c</div>
-          <div><span id="spnBronzeIngotValue">0</span></div>
+          <div><span id="spnBronzeIngotValue">0</span> <img src="static/bronze_ingot.png"></div>
           <div><button id="btnSellBronzeIngot" class="base_btn">100 <img src="static/money-bag.png"></button></div>
         </div>
 
@@ -166,7 +166,7 @@
           <div><span id="spnToolsUpgLevel">0</span></div>
           <div><button id="btnUpgTools" class="base_btn"><span id="spnToolsUpg">1000</span> <img src="static/coin.png"></button></div>
           <div><span id="spnToolsRate">0</span>/c</div>
-          <div><span id="spnToolsValue">0</span></div>
+          <div><span id="spnToolsValue">0</span> <img src="static/tools.png"></div>
           <div><button id="btnSellTools" class="base_btn">100 <img src="static/money-bag.png"></button></div>
         </div>
         
@@ -175,7 +175,7 @@
           <div><span id="spnNailsUpgLevel">0</span></div>
           <div><button id="btnUpgNails" class="base_btn"><span id="spnNailsUpg">1000</span> <img src="static/coin.png"></button></div>
           <div><span id="spnNailsRate">0</span>/c</div>
-          <div><span id="spnNailsValue">0</span></div>
+          <div><span id="spnNailsValue">0</span> <img src="static/nails.png"></div>
           <div><button id="btnSellNails" class="base_btn">100 <img src="static/money-bag.png"></button></div>
         </div>
 
