--- a/index.html
+++ b/index.html
@@ -214,8 +214,25 @@
           </div>
         </div>
       </div>
-      <div><!-- Пустой div заглушка --></div>
-      <div>Строительство города</div>
+      
+      <div class="city">
+        <div class="city_head"><div>Строительство</div></div>
+        <div class="material_line">
+          <div class="gridItemBorder">Объект</div>
+          <div class="gridItemBorder">Ресурсы</div>
+          <div class="gridItemBorder">Строить</div>
+          <div class="gridItemBorder">Построено</div>
+        </div>
+
+        <div class="material_line">
+          <div>Дом</div>
+          <div>Бревна: 10</div>
+          <div><button id="btnBuildHouse" class="base_btn"><img src="static/hammer.png"></button></div>
+          <div><span id="spnHouseValue">0</span>/50 <img src="static/house.png"></div>
+        </div>
+        </div>
+      </div>
+      <div><!-- Пустой div-заглушка --></div>
     </div>
   </div>
   <div id="city" class="tabcontent">
