--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
     <div class="main_container">
       <div class="material">
         <div class="name_mat">Добыча</div>
-
-        <div class="material_line ml-p">
-          <div class="gridItemBorder">Материал</div>
-          <div class="gridItemBorder">Уровень</div>
-          <div class="gridItemBorder">Улучшение</div>
-          <div class="gridItemBorder">Добыча</div>
-          <div class="gridItemBorder">Количество</div>
-          <div class="gridItemBorder">Продажа</div>
+        <div class="head_mat material_line">
+            <div class="gridItemBorder">Материал</div>
+            <div class="gridItemBorder">Уровень</div>
+            <div class="gridItemBorder">Улучшение</div>
+            <div class="gridItemBorder">Добыча</div>
+            <div class="gridItemBorder">Количество</div>
+            <div class="gridItemBorder">Продажа</div>
         </div>
+
+        
 
         <div class="material_line">
           <div>Бревна</div>
@@ -86,7 +87,7 @@
       <div class="recycling">
         <div class="name_recyc">Переработка</div>
 
-        <div class="material_line ml-p">
+        <div class="head_rec material_line">
           <div class="gridItemBorder">Материал</div>
           <div class="gridItemBorder">Уровень</div>
           <div class="gridItemBorder">Улучшение</div>
@@ -152,7 +153,7 @@
       <div class="production">
         <div class="name_prod">Производство</div>
 
-        <div class="material_line  ml-p">
+        <div class="head_prod material_line">
           <div class="gridItemBorder">Предмет</div>
           <div class="gridItemBorder">Уровень</div>
           <div class="gridItemBorder">Улучшение</div>
@@ -218,12 +219,12 @@
       
       <div class="build">
         <div class="build_head"><div>Строительство</div></div>
-        <!-- <div class="material_line">
+        <div class="head_build material_line">
           <div class="gridItemBorder">Объект</div>
           <div class="gridItemBorder">Ресурсы</div>
           <div class="gridItemBorder">Строить</div>
           <div class="gridItemBorder">Построено</div>
-        </div> -->
+        </div>
 
         <div class="material_line ml-p">
           <div>Дом</div>
