--- a/index.html
+++ b/index.html
@@ -49,35 +49,35 @@
 
         
 
-        <div class="material_line">
+        <div id="wood" class="material_line">
           <div>Бревна (<span id="spnWoodUpgLevel">0</span>)</div>
           <div><button id="btnUpgWood" class="base_btn"><span id="spnWoodUpg">10</span> <img src="static/coin.png"></button></div>
           <div><span id="spnWoodValue">0</span> <img src="static/wood.png"> (<span id="spnWoodRate">0</span>/c)</div>
           <div><button id="btnSellWood" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="stone" class="material_line" style="display: none;">
           <div>Камень (<span id="spnStoneUpgLevel">0</span>)</div>
           <div><button id="btnUpgStone" class="base_btn"><span id="spnStoneUpg">300</span> <img src="static/coin.png"></button></div>
           <div><span id="spnStoneValue">0</span> <img src="static/stone.png"> (<span id="spnStoneRate">0</span>/c)</div>
           <div><button id="btnSellStone" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="copperore" class="material_line" style="display: none;">
           <div>Медная руда (<span id="spnCopperOreUpgLevel">0</span>)</div>
           <div><button id="btnUpgCopperOre" class="base_btn"><span id="spnCopperOreUpg">500</span> <img src="static/coin.png"></button></div>
           <div><span id="spnCopperOreValue">0</span> <img src="static/copper_ore.png"> (<span id="spnCopperOreRate">0</span>/c)</div>
           <div><button id="btnSellCopperOre" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="tinore" class="material_line" style="display: none;">
           <div>Оловянная руда (<span id="spnTinOreUpgLevel">0</span>)</div>
           <div><button id="btnUpgTinOre" class="base_btn"><span id="spnTinOreUpg">750</span> <img src="static/coin.png"></button></div>
           <div><span id="spnTinOreValue">0</span> <img src="static/tin_ore.png"> (<span id="spnTinOreRate">0</span>/c)</div>
           <div><button id="btnSellTinOre" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="ironore" class="material_line" style="display: none;">
           <div>Железная руда (<span id="spnIronOreUpgLevel">0</span>)</div>
           <div><button id="btnUpgIronOre" class="base_btn"><span id="spnIronOreUpg">1000</span> <img src="static/coin.png"></button></div>
           <div><span id="spnIronOreValue">0</span> <img src="static/iron_ore.png"> (<span id="spnIronOreRate">0</span>/c)</div>
@@ -94,42 +94,42 @@
           <div class="gridItemBorder">Продажа</div>
         </div> -->
 
-        <div class="material_line">
+        <div id="planks" class="material_line" style="display: none;">
           <div>Доски (<span id="spnPlankUpgLevel">0</span>)</div>
           <div><button id="btnUpgPlank" class="base_btn"><span id="spnPlankUpg">100</span> <img src="static/coin.png"></button> </div>
           <div class="tooltip" data-tooltip-content="#tooltip_plank"><span id="spnPlankValue">0</span> <img src="static/plank.png"> (<span id="spnPlankRate">0</span>/c)</div>
           <div><button id="btnSellPlank" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="blocks" class="material_line" style="display: none;">
           <div>Блоки (<span id="spnBlocksUpgLevel">0</span>)</div>
           <div><button id="btnUpgBlocks" class="base_btn"><span id="spnBlocksUpg">500</span> <img src="static/coin.png"></button></div>
           <div class="tooltip" data-tooltip-content="#tooltip_blocks"><span id="spnBlocksValue">0</span> <img src="static/block.png"> (<span id="spnBlocksRate">0</span>/c)</div>
           <div><button id="btnSellBlocks" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="copperingots" class="material_line" style="display: none;">
           <div>Медные слитки (<span id="spnCopperIngotUpgLevel">0</span>)</div>
           <div><button id="btnUpgCopperIngot" class="base_btn"><span id="spnCopperIngotUpg">750</span> <img src="static/coin.png"></button></div>
           <div class="tooltip" data-tooltip-content="#tooltip_copperingot"><span id="spnCopperIngotValue">0</span> <img src="static/copper_ingot.png"> (<span id="spnCopperIngotRate">0</span>/c)</div>
           <div><button id="btnSellCopperIngot" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="tiningots" class="material_line" style="display: none;">
           <div>Оловянные слитки (<span id="spnTinIngotUpgLevel">0</span>)</div>
           <div><button id="btnUpgTinIngot" class="base_btn"><span id="spnTinIngotUpg">800</span> <img src="static/coin.png"></button></div>
           <div class="tooltip" data-tooltip-content="#tooltip_tiningot"><span id="spnTinIngotValue">0</span> <img src="static/tin_ingot.png"> (<span id="spnTinIngotRate">0</span>/c)</div>
           <div><button id="btnSellTinIngot" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="ironingots" class="material_line" style="display: none;">
           <div>Железные слитки (<span id="spnIronIngotUpgLevel">0</span>)</div>
           <div><button id="btnUpgIronIngot" class="base_btn"><span id="spnIronIngotUpg">1000</span> <img src="static/coin.png"></button></div>
           <div class="tooltip" data-tooltip-content="#tooltip_ironingot"><span id="spnIronIngotValue">0</span> <img src="static/iron_ingot.png"> (<span id="spnIronIngotRate">0</span>/c)</div>
           <div><button id="btnSellIronIngot" class="base_btn">0 <img src="static/money-bag.png"></button></div>
         </div>
 
-        <div class="material_line">
+        <div id="bronzeingots" class="material_line" style="display: none;">
           <div>Бронзовые слитки (<span id="spnBronzeIngotUpgLevel">0</span>)</div>
           <div><button id="btnUpgBronzeIngot" class="base_btn"><span id="spnBronzeIngotUpg">1500</span> <img src="static/coin.png"></button></div>
           <div class="tooltip" data-tooltip-content="#tooltip_bronzeingot"><span id="spnBronzeIngotValue">0</span> <img src="static/bronze_ingot.png"> (<span id="spnBronzeIngotRate">0</span>/c)</div>
@@ -146,14 +146,14 @@
           <div class="gridItemBorder">Продажа</div>
         </div> -->
 
-        <div class="material_line">
+        <div id="tools" class="material_line"  style="display: none;">
           <div>Инструменты (<span id="spnToolsUpgLevel">0</span>)</div>
           <div><button id="btnUpgTools" class="base_btn"><span id="spnToolsUpg">1000</span> <img src="static/coin.png"></button></div>
           <div><span id="spnToolsValue">0</span> <img src="static/tools.png"> (<span id="spnToolsRate">0</span>/c)</div>
           <div><button id="btnSellTools" class="base_btn">100 <img src="static/money-bag.png"></button></div>
         </div>
         
-        <div class="material_line">
+        <div id="nails" class="material_line"  style="display: none;">
           <div>Гвозди (<span id="spnNailsUpgLevel">0</span>)</div>
           <div><button id="btnUpgNails" class="base_btn"><span id="spnNailsUpg">1000</span> <img src="static/coin.png"></button></div>
           <div><span id="spnNailsValue">0</span> <img src="static/nails.png"> (<span id="spnNailsRate">0</span>/c)</div>
@@ -198,7 +198,7 @@
             <button id="btnTest" style="width: 120px;" onclick="TestFunc()">Тестирование</button>
           </div>
           <div style="place-self: center;">
-            <button id="btnTest_1" style="width: 120px;">test1<img src="static/coin.png"></button>
+            <button id="btnTest_1" style="width: 120px;" onclick="ShowAll()">Show All</button>
           </div>
         </div>
       </div>
@@ -251,8 +251,6 @@
   </div>
   <div id="city" class="tabcontent">
     <p>Заготовка под Город</p>
-    <span class="tooltip" data-tooltip-content="#tooltip_bronze">This span has a tooltip with HTML when you hover over
-      it!</span>
   </div>
   <div id="outerworld" class="tabcontent">
     <p>Заготовка под Запределье</p>
@@ -280,8 +278,10 @@
   </div>
   <!-- ... -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./script_game.js"></script>
-  <script src="./scripts_page.js"></script>
+  <script src="scripts/game.js"></script>
+  <script src="scripts/page.js"></script>
+  <script src="scripts/ui.js"></script>
+  <script src="scripts/listeners.js"></script>
   <script>window.onload = gameLoad()</script>
 
   
