--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>
     IncreCraft
   </title>
-  <link rel="stylesheet" type="text/css" href="styles.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css" media="all">
 
   <!-- тесты -->
   <link rel="stylesheet" type="text/css" href="tooltipster/dist/css/tooltipster.bundle.min.css" />
